--- a/reactSupabaseAuthCrud/package.json
+++ b/reactSupabaseAuthCrud/package.json
@@ -8,17 +8,18 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-    
   },
   "dependencies": {
     "@mercadopago/sdk-react": "^0.0.19",
     "@supabase/supabase-js": "^2.43.3",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "dom": "^0.0.3",
     "dotenv": "^16.4.5",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "router": "^1.3.8",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
