--- a/reactSupabaseAuthCrud/package.json
+++ b/reactSupabaseAuthCrud/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mercadopago/sdk-react": "^0.0.19",
+    "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.43.3",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
