--- a/reactSupabaseAuthCrud/package.json
+++ b/reactSupabaseAuthCrud/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@mercadopago/sdk-react": "^0.0.19",
     "@react-google-maps/api": "^2.19.3",
     "@supabase/supabase-js": "^2.43.3",
